--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,47 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
+
+:root {
+	--background: oklch(95.16% 0.0242 343.23);
+	--secondary-background: oklch(100% 0 0);
+	--foreground: oklch(0% 0 0);
+	--main-foreground: oklch(0% 0 0);
+	--main: oklch(71.5% 0.197 354.23);
+	--border: oklch(0% 0 0);
+	--ring: oklch(0% 0 0);
+	--overlay: oklch(0% 0 0 / 0.8);
+	--shadow: 4px 4px 0px 0px var(--border);
+}
+
+.dark {
+	--background: oklch(26.3% 0.054 358.23);
+	--secondary-background: oklch(23.93% 0 0);
+	--foreground: oklch(92.49% 0 0);
+	--main-foreground: oklch(0% 0 0);
+	--main: oklch(65.98% 0.2407 358.64);
+	--border: oklch(0% 0 0);
+	--ring: oklch(100% 0 0);
+	--shadow: 4px 4px 0px 0px var(--border);
+}
+
+@theme inline {
+	--color-main: var(--main);
+	--color-background: var(--background);
+	--color-secondary-background: var(--secondary-background);
+	--color-foreground: var(--foreground);
+	--color-main-foreground: var(--main-foreground);
+	--color-border: var(--border);
+	--color-overlay: var(--overlay);
+	--color-ring: var(--ring);
+
+	--spacing-boxShadowX: 4px;
+	--spacing-boxShadowY: 4px;
+	--spacing-reverseBoxShadowX: -4px;
+	--spacing-reverseBoxShadowY: -4px;
+	--radius-base: 5px;
+	--shadow-shadow: var(--shadow);
+	--font-weight-base: 500;
+	--font-weight-heading: 700;
+}
